1、MessageBoxControl.Tip方法默认自动关闭窗口 2、修复DataGrid在SelectionUnit=Cell模式下耗内存的Bug 3、ToggleButtonBaseStyle新增IsMouseOver样式

--- a/test/Views/Slider.xaml
+++ b/test/Views/Slider.xaml
@@ -19,6 +19,7 @@
                 <Slider Maximum="100" Margin="5" Value="10" Orientation="Vertical" Height="100" HorizontalAlignment="Center" />
                 <Slider Maximum="100" Margin="5" Value="20" IsEnabled="False"/>
                 <Slider Maximum="100" Margin="5" Value="30" TickPlacement="Both" TickFrequency="20" />
+                <Slider Maximum="100" Margin="5" Value="20" TickPlacement="Both" Ticks="10,20,50,80,100" />
                 <Slider Maximum="100" Margin="5" Value="40"  IsSelectionRangeEnabled="True" SelectionStart="60" SelectionEnd="100"/>
             </StackPanel>
         </GroupBox>
