--- a/src/Themes/Styles/Assets/RadioButton.xaml
+++ b/src/Themes/Styles/Assets/RadioButton.xaml
@@ -53,13 +53,16 @@
         <Setter Property="FocusVisualStyle" Value="{x:Null}" />
         <Setter Property="BorderBrush" Value="{StaticResource BorderBrush}" />
         <Setter Property="Foreground" Value="{StaticResource Foreground}" />
+        <Setter Property="Background" Value="Transparent"/>
         <Setter Property="BorderThickness" Value="1" />
         <Setter Property="VerticalContentAlignment" Value="Center"/>
         <Setter Property="HorizontalContentAlignment" Value="Center"/>
+        <Setter Property="attach:RadioButtonElement.CornerRadius" Value="{StaticResource Control.CornerRadius}"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type RadioButton}">
-                    <Border  Padding="{TemplateBinding Padding}" Background="{TemplateBinding Background}"
+                    <Border  Padding="{TemplateBinding Padding}"
+                             Background="{TemplateBinding Background}"
                              BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}"
                              CornerRadius="{Binding Path=(attach:RadioButtonElement.CornerRadius),RelativeSource={RelativeSource  Mode=TemplatedParent}}">
                         <ContentPresenter Grid.Column="1" Focusable="False" 
@@ -71,7 +74,9 @@
                      
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
-                            <Setter Property="BorderBrush" Value="{StaticResource BorderBrushHover}" />
+                            <Setter Property="Background" Value="{StaticResource Control.BackgroundHover }"/>
+                            <Setter Property="BorderBrush" Value="{StaticResource BorderBrushHover}"/>
+                            <Setter Property="Foreground" Value="{StaticResource ForegroundHover}"/>
                         </Trigger>
                         <Trigger Property="IsChecked" Value="True">
                             <Setter  Property="Background" Value="{StaticResource Item.BackgroundSelected}" />
