--- a/src/Themes/Styles/Assets/ToggleButton.xaml
+++ b/src/Themes/Styles/Assets/ToggleButton.xaml
@@ -28,8 +28,12 @@
                     </Border>
  
                     <ControlTemplate.Triggers>
-                       
-       
+
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="Background" Value="{StaticResource Control.BackgroundHover }"/>
+                            <Setter Property="BorderBrush" Value="{StaticResource BorderBrushHover}"/>
+                            <Setter Property="Foreground" Value="{StaticResource ForegroundHover}"/>
+                        </Trigger>
                         <Trigger Property="IsChecked" Value="True">
                             <Setter Property="Background"  Value="{StaticResource Item.BackgroundSelected}"/>
                             <Setter Property="Foreground"  Value="{StaticResource Item.ForegroundSelected}"/>
