修复NumericUpDown最大值绑定失效的问题
1、修复NumericUpDown最大值绑定失效的问题
2、Button的图标默认大小由字体的1.1倍修改为字体的1.8倍

--- a/src/Themes/Styles/NumericUpDown.xaml
+++ b/src/Themes/Styles/NumericUpDown.xaml
@@ -150,7 +150,8 @@
         <Setter Property="BorderBrush" Value="{StaticResource BorderBrush}"/>
         <Setter Property="Foreground" Value="{StaticResource Foreground}"/>
         <Setter Property="LedForeground" Value="{StaticResource Foreground}"/>
-        <Setter Property="BorderThickness" Value=" 1"/>
+        <Setter Property="BorderThickness" Value="1"/>
+        <Setter Property="Maximum" Value="65535"/>
         <Setter Property="Focusable" Value="True"/>
         <Setter Property="Margin" Value="{DynamicResource Control.VerticalMargin}"/>
         <Setter Property="Template" Value="{StaticResource NumericUpDownHorizontalTemplate}"/>
