--- a/src/Themes/Styles/Assets/ComboBox.xaml
+++ b/src/Themes/Styles/Assets/ComboBox.xaml
@@ -17,7 +17,6 @@
                         <ScrollViewer x:Name="PART_ContentHost" Background="Transparent" Focusable="false"
                                   HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Hidden"/>
                     </Grid>
-               
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
@@ -74,7 +73,7 @@
                     </Grid>
                 </Popup>
                 <ToggleButton Grid.ColumnSpan="2" Grid.Column="0" Style="{StaticResource ComboBoxToggleButton}"
-                          Background="{TemplateBinding Background}"
+                          Background="Transparent"
                           BorderBrush="{TemplateBinding BorderBrush}"
                           BorderThickness="{TemplateBinding BorderThickness}"
                           attach:ButtonElement.CornerRadius="{Binding Path=(attach:ComboBoxElement.CornerRadius),RelativeSource={RelativeSource Mode=TemplatedParent}}"
@@ -88,6 +87,7 @@
                      HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
                      IsReadOnly="{Binding IsReadOnly, RelativeSource={RelativeSource TemplatedParent}}"
                      Margin="{TemplateBinding Padding}"
+                     Foreground="{TemplateBinding Foreground}"
                      Padding="0"
                      Style="{StaticResource ComboBoxEditableTextBox}"
                      VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"/>
@@ -229,12 +229,11 @@
                                 </Grid>
                             </Popup>
                             <Border Grid.Column="0"  Grid.ColumnSpan="2"  BorderBrush="{TemplateBinding BorderBrush}"
-                                    BorderThickness="{TemplateBinding BorderThickness}">
+                                    BorderThickness="{TemplateBinding BorderThickness}"
+                                    Background="{TemplateBinding Background}">
                                 <ToggleButton   x:Name="ToggleButton"
                                       Style="{StaticResource ComboBoxToggleButton}"
-                                      Background="{TemplateBinding Background}"
-                                      BorderBrush="{TemplateBinding BorderBrush}"
-                                      BorderThickness="0"
+                                      Background="Transparent"
                                       SnapsToDevicePixels="True"
                                       attach:ButtonElement.CornerRadius="{Binding Path=(attach:ComboBoxElement.CornerRadius),RelativeSource={RelativeSource Mode=TemplatedParent}}"
                                       IsChecked="{Binding Path=IsDropDownOpen,Mode=TwoWay,RelativeSource={RelativeSource TemplatedParent}}"/>
@@ -290,6 +289,7 @@
                         </Trigger>
                         <Trigger Property="IsReadOnly" Value="True">
                             <Setter Property="Visibility" TargetName="ToggleButton" Value="Collapsed"/>
+                            <Setter Property="Opacity" Value="0.6" TargetName="ContentPresenter"/>
                         </Trigger>
                         <!--<Trigger Property="IsEnabled" Value="false">
                             <Setter Property="Opacity" Value="0.6"/>
@@ -366,13 +366,17 @@
                                     </Border>
                                 </Grid>
                             </Popup>
-                            <ToggleButton Grid.ColumnSpan="2" Grid.Column="0"   x:Name="ToggleButton"
-                                      Background="{TemplateBinding Background}"
-                                      BorderBrush="{TemplateBinding BorderBrush}"
-                                      BorderThickness="{TemplateBinding BorderThickness}"
+                            <Border Grid.Column="0"  Grid.ColumnSpan="2"  BorderBrush="{TemplateBinding BorderBrush}"
+                                    BorderThickness="{TemplateBinding BorderThickness}"
+                                     Background="{TemplateBinding Background}">
+                                <ToggleButton x:Name="ToggleButton"
+                                      Background="Transparent"
+                                      BorderThickness="0"
                                       attach:ButtonElement.CornerRadius="{Binding Path=(attach:ComboBoxElement.CornerRadius),RelativeSource={RelativeSource Mode=TemplatedParent}}"
                                       IsChecked="{Binding Path=IsDropDownOpen,Mode=TwoWay,RelativeSource={RelativeSource TemplatedParent}}"/>
 
+                            </Border>
+                         
                             <ContentPresenter Grid.Column="0" Grid.ColumnSpan="2"  IsHitTestVisible="false" x:Name="ContentPresenter"
                                           Margin="{TemplateBinding Padding}"  
                                           Content="{TemplateBinding SelectionBoxItem}"
@@ -421,13 +425,125 @@
                         <Trigger Property="IsReadOnly" Value="True">
                             <Setter Property="Visibility" TargetName="ToggleButton" Value="Collapsed"/>
                             <Setter Property="Opacity" Value="0.6" TargetName="ContentPresenter"/>
-
                         </Trigger>
                         <Trigger Property="IsEnabled" Value="false">
                             <Setter TargetName="ContentPresenter" Property="Opacity" Value="0.6"/>
                             <Setter Property="Background" Value="{StaticResource Control.BackgroundDisabled}"/>
                             <Setter Property="BorderThickness" Value="0"/>
                         </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style x:Key="DataGridComoboBoxStyle"  TargetType="{x:Type ComboBox}" BasedOn="{StaticResource ComboBoxBaseStyle}">
+        <Setter Property="BorderThickness"  Value="0"/>
+        <Setter Property="Background" Value="Transparent"/>
+        <Setter Property="Margin" Value="0"/>
+        <!--<Setter Property="Foreground" Value="{Binding Foreground,RelativeSource={RelativeSource AncestorType=DataGridCell}}"/>-->
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type ComboBox}">
+                    <Grid Name="MainGrid" SnapsToDevicePixels="true" >
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="30"/>
+                        </Grid.ColumnDefinitions>
+                        <Popup Name="PART_Popup"
+                               AllowsTransparency="true"
+                               Grid.ColumnSpan="2"
+                               Placement="Bottom"
+                               Margin="1" 
+                               IsOpen="{Binding Path=IsDropDownOpen, RelativeSource={RelativeSource TemplatedParent}}"
+                               PopupAnimation="{StaticResource {x:Static SystemParameters.ComboBoxPopupAnimationKey}}">
+                            <Grid Margin="{DynamicResource Control.Margin}" MinWidth="{Binding ElementName=MainGrid,Path=ActualWidth}"
+                                  MaxHeight="{TemplateBinding MaxDropDownHeight}"
+                                  >
+                                <Border Background="#0C000000" BorderBrush="#0F000000" BorderThickness="1"
+                                        CornerRadius="2.5" Margin="-1"/>
+                                <Border Background="#0A000000" BorderBrush="#0C000000" BorderThickness="1"
+                                        CornerRadius="2.75" Margin="-2"/>
+
+                                <Border x:Name="DropDownBorder"
+                                        Background="{TemplateBinding Background}"
+                                        BorderBrush="{TemplateBinding BorderBrush}"
+                                        BorderThickness="1"
+                                        Margin="0,-1,0,0">
+                                    <!-- popup border thickness not dependent on BorderThickness property-->
+                                    <ScrollViewer Name="DropDownScrollViewer">
+                                        <Grid RenderOptions.ClearTypeHint="Enabled" >
+                                            <Canvas Height="0" Width="0" HorizontalAlignment="Left"
+                                                    VerticalAlignment="Top">
+                                                <Rectangle
+                                                    Name="OpaqueRect"
+                                                    Height="{Binding ElementName=DropDownBorder,Path=ActualHeight}"
+                                                    Width="{Binding ElementName=DropDownBorder,Path=ActualWidth}"
+                                                    Fill="{Binding ElementName=DropDownBorder,Path=Background}"/>
+                                            </Canvas>
+                                            <ItemsPresenter Name="ItemsPresenter" 
+                                                            KeyboardNavigation.DirectionalNavigation="Contained"
+                                                            SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
+                                        </Grid>
+                                    </ScrollViewer>
+                                </Border>
+                            </Grid>
+                        </Popup>
+                        <ToggleButton Grid.ColumnSpan="2" Grid.Column="0"   x:Name="ToggleButton"
+                                      Background="{TemplateBinding Background}"
+                                      BorderBrush="{TemplateBinding BorderBrush}"
+                                      BorderThickness="{TemplateBinding BorderThickness}"
+                                      attach:ButtonElement.CornerRadius="{Binding Path=(attach:ComboBoxElement.CornerRadius),RelativeSource={RelativeSource Mode=TemplatedParent}}"
+                                      IsChecked="{Binding Path=IsDropDownOpen,Mode=TwoWay,RelativeSource={RelativeSource TemplatedParent}}"/>
+
+                        <ContentPresenter Grid.Column="0" Grid.ColumnSpan="2"  IsHitTestVisible="false" x:Name="ContentPresenter"
+                                          Margin="{TemplateBinding Padding}"  
+                                          Content="{TemplateBinding SelectionBoxItem}"
+                                          ContentTemplate="{TemplateBinding SelectionBoxItemTemplate}"
+                                          ContentTemplateSelector="{TemplateBinding ItemTemplateSelector}"
+                                          ContentStringFormat="{TemplateBinding SelectionBoxItemStringFormat}"
+                                          HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                          SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
+
+                    </Grid>
+
+
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="HasItems" Value="false">
+                            <Setter TargetName="DropDownBorder" Property="Height" Value="95"/>
+                        </Trigger>
+                        <Trigger Property="IsMouseOver" Value="true">
+                            <Setter Property="BorderBrush" Value="{StaticResource BorderBrushHover}"/>
+                        </Trigger>
+                        <Trigger Property="IsFocused" Value="true">
+                            <Setter Property="BorderBrush" Value="{StaticResource BorderBrushFocused}"/>
+                        </Trigger>
+                        <Trigger Property="IsGrouping" Value="true">
+                            <Setter Property="ScrollViewer.CanContentScroll" Value="false"/>
+                        </Trigger>
+                        <Trigger SourceName="DropDownScrollViewer" Property="ScrollViewer.CanContentScroll"
+                                 Value="false">
+                            <Setter TargetName="OpaqueRect"
+                                    Property="Canvas.Top"
+                                    Value="{Binding ElementName=DropDownScrollViewer, Path=VerticalOffset}"/>
+                            <Setter TargetName="OpaqueRect"
+                                    Property="Canvas.Left"
+                                    Value="{Binding ElementName=DropDownScrollViewer, Path=HorizontalOffset}"/>
+                        </Trigger>
+                        <Trigger Property="IsReadOnly" Value="True">
+                            <Setter Property="Visibility" TargetName="ToggleButton" Value="Collapsed"/>
+                            <Setter Property="Opacity" Value="0.6" TargetName="ContentPresenter"/>
+
+                        </Trigger>
+                        <MultiDataTrigger>
+                            <MultiDataTrigger.Conditions>
+                                <Condition Binding="{Binding IsSelected,RelativeSource={RelativeSource AncestorType=DataGridCell}}" Value="true"/>
+                                <Condition Binding="{Binding IsChecked,ElementName=ToggleButton}" Value="false" />
+                            </MultiDataTrigger.Conditions>
+                            <MultiDataTrigger.Setters>
+                                <Setter Property="Foreground" Value="{StaticResource Item.ForegroundSelected}" />
+                            </MultiDataTrigger.Setters>
+                        </MultiDataTrigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
