--- a/src/Themes/Styles/Assets/Frame.xaml
+++ b/src/Themes/Styles/Assets/Frame.xaml
@@ -1,4 +1,54 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:attach="clr-namespace:WYW.UI.Controls.Attach">
 
+    <ControlTemplate x:Key="FrameWithNavigationUIStyle" TargetType="Frame">
+        <Border CornerRadius="{Binding Path=(attach:FrameElement.CornerRadius),RelativeSource={RelativeSource TemplatedParent}}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}">
+            <DockPanel LastChildFill="True">
+                <Border  DockPanel.Dock="Top" BorderThickness="0,0,0,1" 
+                         BorderBrush="{TemplateBinding BorderBrush}" 
+                         Background="{DynamicResource DarkDefaultBrush}">
+                    <Grid Height="{StaticResource Header.Height}" Name="Header">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="auto"/>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="auto"/>
+                        </Grid.ColumnDefinitions>
+                        <Button Width="{Binding ActualHeight,ElementName=Header,Converter={StaticResource MultiplicationConverter},ConverterParameter=1.5}" Grid.Column="0" attach:ButtonElement.CornerRadius="0" attach:ButtonElement.IcoGeometry="{StaticResource LeftGeometry}" Command="NavigationCommands.BrowseBack"/>
+                        <Button Width="{Binding ActualHeight,ElementName=Header,Converter={StaticResource MultiplicationConverter},ConverterParameter=1.5}" Grid.Column="2" attach:ButtonElement.CornerRadius="0" attach:ButtonElement.IcoGeometry="{StaticResource RightGeometry}" Command="NavigationCommands.BrowseForward"/>
+                    </Grid>
+                </Border>
+                <ContentPresenter SnapsToDevicePixels="True" x:Name="PART_NavWinCP" ClipToBounds="true"/>
+            </DockPanel>
+        </Border>
+    </ControlTemplate>
+    <Style TargetType="Frame">
+        <Setter Property="attach:FrameElement.CornerRadius" Value="0"/>
+        <Setter Property="BorderThickness" Value="1"/>
+        <Setter Property="BorderBrush" Value="{DynamicResource BorderBrush}"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="Frame">
+                    <Border CornerRadius="{Binding Path=(attach:FrameElement.CornerRadius),RelativeSource={RelativeSource TemplatedParent}}"
+                            BorderBrush="{TemplateBinding BorderBrush}" 
+                            BorderThickness="{TemplateBinding BorderThickness}" 
+                            Background="{TemplateBinding Background}">
+                        <ContentPresenter SnapsToDevicePixels="True" x:Name="PART_FrameCP"/>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+        <Style.Triggers>
+            <Trigger Property="NavigationUIVisibility" Value="Visible">
+                <Setter Property="Template" Value="{StaticResource FrameWithNavigationUIStyle}"/>
+            </Trigger>
+            <MultiTrigger>
+                <MultiTrigger.Conditions>
+                    <Condition Property="JournalOwnership" Value="OwnsJournal"/>
+                    <Condition Property="NavigationUIVisibility" Value="Automatic"/>
+                </MultiTrigger.Conditions>
+                <Setter Property="Template" Value="{StaticResource FrameWithNavigationUIStyle}"/>
+            </MultiTrigger>
+        </Style.Triggers>
+    </Style>
 </ResourceDictionary>
