--- a/src/Themes/Styles/Assets/ListBoxItem.xaml
+++ b/src/Themes/Styles/Assets/ListBoxItem.xaml
@@ -7,6 +7,7 @@
         <Setter Property="VerticalContentAlignment" Value="{Binding VerticalContentAlignment,RelativeSource={RelativeSource AncestorType=ListBox}}" />
         <Setter Property="Margin" Value="0" />
         <Setter Property="Padding" Value="5,0" />
+        <Setter Property="MinHeight" Value="{DynamicResource Item.Height}" />
         <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="FocusVisualStyle" Value="{x:Null}" />
         <Setter Property="Template">
