--- a/src/Themes/Styles/Assets/Menu.xaml
+++ b/src/Themes/Styles/Assets/Menu.xaml
@@ -1,6 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Style  TargetType="Menu">
+    <Style TargetType="Menu">
         <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="Foreground" Value="{StaticResource Foreground}"/>
         <Setter Property="Background" Value="Transparent"/>
@@ -17,19 +17,17 @@
                             Background="{TemplateBinding Background}" 
                             Padding="{TemplateBinding Padding}" SnapsToDevicePixels="true">
                         <StackPanel Orientation="Horizontal" IsItemsHost="True" Name="ItemsPresenter" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
-                                    
                                          KeyboardNavigation.DirectionalNavigation="Contained" />
-                     
+
                     </Border>
                     <ControlTemplate.Triggers>
-                        <!--<Trigger Property="IsMouseOver" Value="True">
-                            <Setter Property="Background" Value="{StaticResource Control.BackgroundHover}"/>
-                        </Trigger>-->
+                        <Trigger Property="IsEnabled" Value="False">
+                            <Setter Property="Opacity" Value="0.6"/>
+                        </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
-                
+
             </Setter.Value>
         </Setter>
     </Style>
-
 </ResourceDictionary>
