--- a/src/Themes/Styles/Assets/MenuItem.xaml
+++ b/src/Themes/Styles/Assets/MenuItem.xaml
@@ -158,7 +158,7 @@
         <Border MinWidth="44" x:Name="templateRoot" BorderBrush="{TemplateBinding BorderBrush}" 
                 BorderThickness="0" Background="{TemplateBinding Background}" 
                 SnapsToDevicePixels="True">
-            <Grid Margin="5,0">
+            <Grid Margin="{TemplateBinding Padding}">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="*"/>
@@ -244,6 +244,7 @@
         <Setter Property="Height" Value="{DynamicResource Item.Height}" />
         <Setter Property="FontSize" Value="{DynamicResource DefaultFontSize}"/>
         <Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Auto"/>
+        <Setter Property="Padding" Value="{StaticResource Control.HorizontalMargin}"/>
         <Setter Property="Template" Value="{StaticResource SubmenuItemTemplate}" />
         <Style.Triggers>
             <Trigger Property="Role" Value="TopLevelHeader">
