--- a/test/Views/DataGrid.xaml
+++ b/test/Views/DataGrid.xaml
@@ -26,7 +26,7 @@
         </Grid.ColumnDefinitions>
         <GroupBox Grid.Column="0" Header="常规用法">
             <StackPanel >
-                <DataGrid ItemsSource="{Binding Items}" HorizontalContentAlignment="Center"  HeadersVisibility="Row">
+                <DataGrid ItemsSource="{Binding Items}"  HeadersVisibility="Row">
                     <DataGrid.Columns>
                         <DataGridCheckBoxColumn Header="选中" Width="*"  Binding="{Binding IsChecked,UpdateSourceTrigger=PropertyChanged}" 
                                             ElementStyle="{StaticResource DataGridCheckBoxEditStyle}"
@@ -44,6 +44,17 @@
                                             EditingElementStyle="{StaticResource DataGridComboBoxEditStyle}"  
                                             SelectedItemBinding="{Binding Major,UpdateSourceTrigger=PropertyChanged}" >
                         </DataGridComboBoxColumn>
+                        <DataGridTemplateColumn Header="组名" Width="*" >
+                            <DataGridTemplateColumn.CellTemplate>
+                                <DataTemplate>
+                                    <ComboBox SelectedIndex="{Binding GroupIndex,UpdateSourceTrigger=PropertyChanged}"  Style="{StaticResource DataGridComoboBoxStyle}">
+                                        <ComboBoxItem Content="研发"/>
+                                        <ComboBoxItem Content="测试"/>
+                                        <ComboBoxItem Content="生产"/>
+                                    </ComboBox>
+                                </DataTemplate>
+                            </DataGridTemplateColumn.CellTemplate>
+                        </DataGridTemplateColumn>
                     </DataGrid.Columns>
                 </DataGrid>
                 <Button Content="验证绑定结果" Margin="0,20,0,0" Command="{Binding TestCommand}"  Height="60"/>
